fix: icons location

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
     <!-- svg ვექტორიული გამოსახულების კონტეინერი -->
     <div class="bg-wraper">
-        <img class="background-svg" src="./src/DPA-background-1.svg" alt="">
+        <img class="background-svg" src="./src/icons/DPA-background-1.svg" alt="">
     </div>
     <!-- --- -->
     <header>
-        <img src="./src/DPA-logo-white.svg" alt="logo" height="50px">
+        <img src="./src/icons/DPA-logo-white.svg" alt="logo" height="50px">
     </header>
     <nav class="nav-wraper">
         <ul>
