--- a/index.html
+++ b/index.html
@@ -13,51 +13,54 @@
 
 <body>
     <!-- svg ვექტორიული გამოსახულების კონტეინერი -->
-    <div class="bg-wraper">
+    <!-- <div class="bg-wraper">
         <img class="background-svg" src="./src/icons/DPA-background-1.svg" alt="">
-    </div>
+    </div> -->
     <!-- --- -->
     <header>
         <img src="./src/icons/DPA-logo-white.svg" alt="logo" height="50px">
+        <nav class="nav-wraper">
+            <ul>
+                <li><a class="btn" href="">ჩვენს შესახებ</a></li>
+                <li><a class="btn" href="">კურსები</a></li>
+                <li><a class="btn" href="">ბლოგი</a></li>
+                <li><a class="btn" href="">პარტნიორი კომპანიები</a></li>
+                <li><a class="btn" href="">კონტაქტი</a></li>
+            </ul>
+        </nav>
     </header>
-    <nav class="nav-wraper">
-        <ul>
-            <li><a class="btn" href="">ჩვენს შესახებ</a></li>
-            <li><a class="btn" href="">სიახლეები</a></li>
-            <li><a class="btn" href="">კურსები</a></li>
-            <li><a class="btn" href="">ლექტორები</a></li>
-            <li><a class="btn" href="">პარტნიორი კომპანიები</a></li>
-            <li><a class="btn" href="">მასტერკლასები</a></li>
-            <li><a class="btn" href="">სტატიები</a></li>
-            <li><a class="btn" href="">კონტაქტი</a></li>
-        </ul>
-    </nav>
+
     <main>
-        <aside>
-            <form action="">
-                <input type="text" name="search" id="search" placeholder="ძებნა">
-            </form>
-            <iframe width="740" height="470" src="https://www.youtube.com/embed/S03T47hapAc"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-        </aside>
+
         <section class="main-section">
-            <h1>თეორიული და პრაქტიკული გამოცდილება</h1>
-            <h3>კადრების გადამზადება</h3>
+            <h1>
+                ისწავლე თეორიული & ბეჭდური<br>
+                სამყაროს შესახებ ყველაფერი
+            </h1>
+            <!-- <h3>კადრების გადამზადება</h3> -->
             <ul>
                 <li>პრე-პრესის ოპერატორის სპეციალობა</li>
                 <li>გრაფიკული დიზაინი</li>
                 <li>ტექნიკური დიზაინი</li>
             </ul>
             <a class="btn more" href="">გაიგე მეტი</a>
+            <form action="">
+                <input type="text" name="search" id="search" placeholder="ძებნა">
+            </form>
         </section>
+        <aside>
+            <iframe id="video-player" src="https://www.youtube.com/embed/S03T47hapAc" title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </aside>
     </main>
     <footer>
         <div class="mail">
             <a href="mailto:designprintacademy@gmail.com">designprintacademy@gmail.com</a>
         </div>
-        <div class="icons"><i class="bi bi-youtube"></i>
+        <div class="icons">
+            <i class="bi bi-youtube"></i>
             <i class="bi bi-facebook"></i>
             <i class="bi bi-instagram"></i>
             <i class="bi bi-linkedin"></i>
